etc/gateway-api/routes/custom-cyborg-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-cyborg-gateway-route
  namespace: openstack
spec:
  parentRefs:
    - name: flex-gateway
      sectionName: cyborg-https
      namespace: envoy-gateway
  hostnames:
    - "cyborg.your.domain.tld"
  rules:
    - backendRefs:
        - name: cyborg-api
          port: 6666
